# index-atlas

./: .env.example  .gitignore  README.md  docker-compose.db.yml  docker-compose.yml
api/: .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
api/src/: app.ts  config.ts  db.ts  openapi.ts  server.ts
api/src/lib/: marketRowSort.ts  marketWindow.ts  shanghaiClock.ts  snapshotMeta.ts  tradeDate.ts
api/src/openapi-spec/: document.ts  registry.ts  setup.ts  zod.ts
api/src/routes/: health.ts  indices.ts  market.ts  session.ts
api/src/services/: dataReadiness.ts  indices.ts  marketSnapshot.ts  tradingSessionState.ts
api/src/sql/: market.ts  readiness.ts
db/: Dockerfile
db/migrations/: 001_init.sql  002_quotes_snapshot_trade_date_unique.sql  003_quotes_split_snapshot_to_daily_rt.sql  004_market_constituent_rollups.sql  005_csi_all_share_index.sql  006_csi_all_share_display_name.sql  007_trade_calendar.sql  008_share_premarket_free_share.sql  009_drop_market_constituent_rollups.sql
web/: Dockerfile  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: configureHeyApiClient.ts
worker/: .env.example  Dockerfile  README.md  pyproject.toml
worker/app/: __init__.py  bootstrap_pipeline.py  config.py  data_readiness.py  db.py  main.py  market_rollups.py  scheduled_jobs.py  shenwan_industry_sync.py  sync_common.py  trade_calendar_sync.py  trading.py  tushare_client.py  tushare_sync.py
worker/scripts/: bootstrap_local_data.py
(+32 files in other folders)
